Revision history for Web::Components

          - More CSS
          - Title text for control menu
          - CSS done for now
          - More refactoring of CSS
          - More CSS refactoring
          - CSS better colour handling
          - Adds proper header content disposition parsing
          - Removes cumulativeOffset from Markup mixin
          - Adds JSDoc
          - Added class block-container for content positioning
          - Panel CSS using flex
          - Panel CSS using grid auto flow column
          - Panel CSS flows content. Experimenting with JSDoc
          - Improved modal event handling
          - Adjusted main container and footer CSS
          - Fixes unwanted calls to unload from modal forms
          - Fixed footer to bottom of main in CSS
          - Removed version from Navigation
          - Fixed frame loading in modal JS
          - Replaced maps with variables in CSS
          - Renamed frame to main in css
          - Cleaned up z axis use in css
          - Page layout now uses CSS grid
          - Uses config prefix instead of name attribute
          - Modal container links can now load pages

0.13.1    2025-05-19 16:44:20
          - Adds build_routes function to Util
          - Model error now sets view to the default
          - Navigation now has content_class attribute
          - Splits out Menus class from Navigation class in JS
          - Changed event register method name in JS utils
          - Improved modal library
          - Updated copyright year
          - Completed POD for component base classes
          - More prereq fixes
          - Curated dependencies
          - Fixed prereqs
          - Updated MANIFEST

0.12.1    2024-11-27 20:55:34
          - Bump version for release
          - Fix tests. Import exceptions from Web::ComposableRequest
          - Added some POD
          - Better exception detection
          - Adds fqdn to Util. Better rv in Model.error